Fix body background bug on iOS

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -12,7 +12,7 @@ body {
   background: var(--color-main);
   background: radial-gradient(var(--color-main), #000000) no-repeat center center;
   background-attachment: fixed;
-  background-size: cover;
+  background-size: scroll;
 	font-size: 16px;
   margin: 0;
 }
