--- a/_scss/_nav-bar.scss
+++ b/_scss/_nav-bar.scss
@@ -53,11 +53,10 @@
   margin: 0;
 }
 
-.site-navigation a,
-.site-navigation a:visited {
+.site-navigation a {
   font-size: .9em;
   display: inline-block;
-  padding: .3em 1em;
+  padding: .3em .6em;
 }
 
 @media (min-width: $bp-medium) {
@@ -79,6 +78,10 @@
 }
 
 @media (min-width: $bp-medium) {
+
+  .site-navigation a {
+    padding: .3em 1em;
+  }
 
   .nav-bar a,
   .nav-bar a:visited {
